# iadrive

./: Makeafile  README.md  SUPPORTEDPLATFORMS.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: drive-test.yml  iadrive.yml  lint.yml  unit-test.yml
iadrive/: __init__.py  __main__.py  cli.py  core.py  drive.py  ia_upload.py  metadata_extract.py  utils.py
tests/: test_iadrive.py  test_utils.py
tests/test_iadrive_files/: mock_drive_content.json
