
[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "IAdrive"
version = "1.0.0"
description = "A tool for archiving google drive files/folders and uploading them to the Internet Archive"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Andres99"}]
keywords = ["internet-archive", "google-drive", "archiving", "backup"]
license = {text = "MIT"}
dependencies = [
    "internetarchive>=5.5.0",
    "gdown>=5.2.0",
    "google-api-python-client>=2.179.0",
    "google-auth>=2.40.3",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
]

[project.scripts]
iadrive = "iadrive.cli:main"

[tool.setuptools.packages.find]
where = ["iadrive"]
